# DataAnalysisAgent

./: .dockerignore  .env.example  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  start.sh
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AuthForm.tsx  ChatInput.tsx  ChatMessage.tsx  Dashboard.tsx  EmptyState.tsx  Sidebar.tsx  VegaChart.tsx
frontend/src/hooks/: useAuth.ts  useChart.ts  useChat.ts
frontend/src/types/: index.ts
src/: __main__.py  config.py  globals.py
src/agents/: __init__.py  general_agent.py  history.py  router_agent.py  sql_agent.py  types.py
src/api/: __init__.py
src/api/v1/: auth.py  chart.py  chat.py  databaseinfo.py  message.py  vectordb.py
src/core/: auth.py  container.py  engine.py  exception.py  pipeline.py  provider.py  responses.py  utils.py
src/database/: base.py  dependencies.py  models.py  mongo.py  postgres.py  state.py
src/extractors/: extractor_json.py
src/graph/: builder.py
src/pipelines/indexing/: db_schema.py
src/prompts/: __init__.py  _prompts.py  chart_prompts.py
src/schemas/: llm_response_schemas.py  tool_input_schemas.py
src/services/: auth_service.py  chart_service.py  database_service.py  message_service.py
src/sqlagent/: __init__.py  models.py
src/sqlagent/embeddings/: __init__.py  embedder.py  vectorstore.py
src/sqlagent/indexer/: __init__.py  schema_indexer.py
src/sqlagent/nodes/: __init__.py  (+2 more)
src/tools/: sql_execution_tool.py
(+9 files in other folders)
