[project]
name = "data-analysis-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "cachetools>=6.2.4",
    "fastapi>=0.123.9",
    "langchain>=1.2.0",
    "langchain-core>=1.2.1",
    "loguru>=0.7.3",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "sf-hamilton>=1.89.0",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
