[project]
name = "dataanalysisagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "beanie>=2.0.0",
    "fastapi>=0.116.1",
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-groq>=0.3.7",
    "langchain-openai>=0.3.32",
    "langchain-qdrant>=0.2.1",
    "langfuse>=3.8.1",
    "langgraph>=0.6.6",
    "langgraph-checkpoint-mongodb>=0.2.1",
    "loguru>=0.7.3",
    "openai-agents>=0.2.11",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.10.1",
    "pydantic[email]>=2.11.7",
    "pyppeteer>=2.0.0",
    "sqlalchemy>=2.0.43",
    "sseclient-py>=1.8.0",
    "streamlit>=1.49.1",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "langsmith>=0.4.21",
    "mlflow>=3.3.2",
]
